dnl -*-m4-*-

AC_INIT

AC_PROG_CC
AC_PROG_CPP

dnl
dnl This variable is only used in the tests and is not passed to the Makefile
dnl
LIBS="-lpam"

dnl
dnl Add -ldl to LIBS if necessary for linking the other test scripts
dnl
PAM_LIB_DL

dnl
dnl Checks if the pam library supports the environment handling functions
dnl
PAM_FUNC_ENV

dnl
dnl Checks if the dl library supports the RTLD_GLOBAL flag
dnl
PAM_DECL_RTLD_GLOBAL

AC_OUTPUT(pam.cfg PAM.pm)
