dnl -*-m4-*-

AC_INIT

AC_PROG_CC
AC_PROG_CPP

dnl Add -ldl to LIBS if necessary for linking the other test scripts
AC_CHECK_LIB(dl, dlopen)

dnl This variable is only used in the tests and is not passed to the Makefile
LIBS="-lpam"

dnl Checks if the pam library supports the environment handling functions
AC_CHECK_FUNCS(pam_getenv)

dnl Checks if the dl library supports the RTLD_GLOBAL flag
AC_CACHE_CHECK(for RTLD_GLOBAL flag, pam_cv_decl_rtld_global,
AC_EGREP_CPP(have_rtld_global,
[#include <dlfcn.h>
#ifdef RTLD_GLOBAL
have_rtld_global
#endif],
pam_cv_decl_rtld_global=yes, pam_cv_decl_rtld_global=no))
if test $pam_cv_decl_rtld_global = yes; then
    DL_LOAD_FLAGS='sub dl_load_flags { 0x01 }'
else
    DL_LOAD_FLAGS=''
fi
AC_SUBST(DL_LOAD_FLAGS)


AC_OUTPUT(pam.cfg PAM.pm)
